k8s/deployment.yml
apiVersion: app/v1
kind: Deployment
metadata:
  name: static
  namespace: about
spec:
  selector:
    matchLables:
      app: static-application
  replicas: 2
  template:
    metadata:
      labels:
        app: static-application
    spec:
      containers:
      - name: static
        image: 003669760817.dkr.ecr.ap-southeast-1.amazonaws.com/static1:30
        ports:
        - containerPort: 80
