k8s/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: about-svc
  namespace: about
spec:
  selsctor:
    app: static-application
  ports:
  - port: 80
    targetPort: 80
