k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: static-ingress
  namespace: about
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /about-svc.about.svc.cluster.local
        backend:
          serviceName: about-svc
          serviceport: 80
